chore(intl): update translations

--- a/assets/translations/de_DE.json
+++ b/assets/translations/de_DE.json
@@ -51,6 +51,7 @@
   "COLLECTION_TRACK_PLAYLIST_REMOVE_DIALOG_BODY": "Entfernen von \"TRACK_NAME\" aus \"PLAYLIST_NAME\"?",
   "COMING_UP": "Demnächst",
   "CONTROL_PANEL": "Control Panel",
+  "COPY_AS_JSON": "Copy as JSON",
   "COPY_LINK": "Link kopieren",
   "CREATE": "erstellen",
   "CREATE_NEW_PLAYLIST": "NEUE PLAYLIST ERSTELLEN",
@@ -146,6 +147,7 @@
   "PLAY_URL": "URL abspielen",
   "PLAY_URL_SUBTITLE": "URI der Medienquelle angeben",
   "PREVIOUS": "Vorherige",
+  "PROPERTY": "Property",
   "PROXY_SUBTITLE": "Proxy für externe Medienquellen einschalten.",
   "PROXY_TITLE": "Proxy",
   "PROXY_URL": "Proxy URL",
@@ -237,6 +239,7 @@
   "UPDATE_AVAILABLE": "Update available: VERSION",
   "USE_MODERN_NOW_PLAYING_SCREEN": "Use modern \"Now Playing Screen\" with dynamic backgrounds & time-synced lyrics",
   "USE_THESE_CHARACTERS_TO_SEPARATE_ARTISTS": "Use ; // / \\\\ or \\ to separate multiple artists.",
+  "VALUE": "Value",
   "VIDEO_SINGLE": "Video",
   "VISUALS": "Add or remove visuals visible during music playback",
   "VISUALS_TITLE": "Visuals",
