--- a/assets/translations/fr_FR.json
+++ b/assets/translations/fr_FR.json
@@ -51,6 +51,7 @@
   "COLLECTION_TRACK_PLAYLIST_REMOVE_DIALOG_BODY": "Supprimer \"TRACK_NAME\" de \"PLAYLIST_NAME\"?",
   "COMING_UP": "À venir",
   "CONTROL_PANEL": "Control Panel",
+  "COPY_AS_JSON": "Copy as JSON",
   "COPY_LINK": "Copier le lien",
   "CREATE": "Créer",
   "CREATE_NEW_PLAYLIST": "Créer une nouvelle playlist",
@@ -146,6 +147,7 @@
   "PLAY_URL": "Lire une URL",
   "PLAY_URL_SUBTITLE": "Entrer l'URL de la ressource média",
   "PREVIOUS": "Précédent",
+  "PROPERTY": "Property",
   "PROXY_SUBTITLE": "Activer le proxy pour les ressources média externes.",
   "PROXY_TITLE": "Proxy",
   "PROXY_URL": "URL du proxy",
@@ -237,6 +239,7 @@
   "UPDATE_AVAILABLE": "Mise à jour disponible : VERSION",
   "USE_MODERN_NOW_PLAYING_SCREEN": "Use modern \"Now Playing Screen\" with dynamic backgrounds & time-synced lyrics",
   "USE_THESE_CHARACTERS_TO_SEPARATE_ARTISTS": "Use ; // / \\\\ or \\ to separate multiple artists.",
+  "VALUE": "Value",
   "VIDEO_SINGLE": "Vidéo",
   "VISUALS": "Add or remove visuals visible during music playback",
   "VISUALS_TITLE": "Visuals",
