--- a/assets/translations/id_ID.json
+++ b/assets/translations/id_ID.json
@@ -51,6 +51,7 @@
   "COLLECTION_TRACK_PLAYLIST_REMOVE_DIALOG_BODY": "Hapus \"TRACK_NAME\" dari \"PLAYLIST_NAME\"?",
   "COMING_UP": "Lagu Selanjutnya",
   "CONTROL_PANEL": "Control Panel",
+  "COPY_AS_JSON": "Copy as JSON",
   "COPY_LINK": "Salin link",
   "CREATE": "Buat",
   "CREATE_NEW_PLAYLIST": "BUAT DAFTAR PUTAR BARU",
@@ -146,6 +147,7 @@
   "PLAY_URL": "Buka URL",
   "PLAY_URL_SUBTITLE": "Masukkan URL ke sumber media",
   "PREVIOUS": "Sebelumnya",
+  "PROPERTY": "Property",
   "PROXY_SUBTITLE": "Aktifkan proxy untuk sumber media external.",
   "PROXY_TITLE": "Proxy",
   "PROXY_URL": "Proxy URL",
@@ -237,6 +239,7 @@
   "UPDATE_AVAILABLE": "Pembaruan tersedia: VERSI",
   "USE_MODERN_NOW_PLAYING_SCREEN": "Use modern \"Now Playing Screen\" with dynamic backgrounds & time-synced lyrics",
   "USE_THESE_CHARACTERS_TO_SEPARATE_ARTISTS": "Use ; // / \\\\ or \\ to separate multiple artists.",
+  "VALUE": "Value",
   "VIDEO_SINGLE": "Video",
   "VISUALS": "Add or remove visuals visible during music playback",
   "VISUALS_TITLE": "Visuals",
