--- a/assets/translations/ja_JP.json
+++ b/assets/translations/ja_JP.json
@@ -51,6 +51,7 @@
   "COLLECTION_TRACK_PLAYLIST_REMOVE_DIALOG_BODY": "\"TRACK_NAME\"を\"PLAYLIST_NAME\"から削除しますか？",
   "COMING_UP": "次の曲",
   "CONTROL_PANEL": "コントロールパネル",
+  "COPY_AS_JSON": "Copy as JSON",
   "COPY_LINK": "リンクをコピー",
   "CREATE": "作成",
   "CREATE_NEW_PLAYLIST": "新しいプレイリストを作成",
@@ -146,6 +147,7 @@
   "PLAY_URL": "URLを再生",
   "PLAY_URL_SUBTITLE": "メディアリソースのURIを入力します",
   "PREVIOUS": "前へ",
+  "PROPERTY": "Property",
   "PROXY_SUBTITLE": "外部メディアリソースのためのプロキシを有効にします",
   "PROXY_TITLE": "プロキシ",
   "PROXY_URL": "プロキシURL",
@@ -237,6 +239,7 @@
   "UPDATE_AVAILABLE": "アップデートが利用可能: VERSION",
   "USE_MODERN_NOW_PLAYING_SCREEN": "ダイナミックな背景と時間同期された歌詞を備えたモダンな\"再生中画面\"を使用する",
   "USE_THESE_CHARACTERS_TO_SEPARATE_ARTISTS": "; // / \\\\ または \\ を使うと複数のアーティストを区切れます。",
+  "VALUE": "Value",
   "VIDEO_SINGLE": "ビデオ",
   "VISUALS": "音楽再生中に表示できるビジュアルを追加または削除",
   "VISUALS_TITLE": "ビジュアル",
