--- a/assets/translations/nl_NL.json
+++ b/assets/translations/nl_NL.json
@@ -51,6 +51,7 @@
   "COLLECTION_TRACK_PLAYLIST_REMOVE_DIALOG_BODY": "Remove \"TRACK_NAME\" from \"PLAYLIST_NAME\"?",
   "COMING_UP": "Volgende",
   "CONTROL_PANEL": "Control Panel",
+  "COPY_AS_JSON": "Copy as JSON",
   "COPY_LINK": "Copy link",
   "CREATE": "Create",
   "CREATE_NEW_PLAYLIST": "CREATE NEW PLAYLIST",
@@ -146,6 +147,7 @@
   "PLAY_URL": "Play URL",
   "PLAY_URL_SUBTITLE": "Enter URI to the media resource",
   "PREVIOUS": "Previous",
+  "PROPERTY": "Property",
   "PROXY_SUBTITLE": "Enable proxy for external media resources.",
   "PROXY_TITLE": "Proxy",
   "PROXY_URL": "Proxy URL",
@@ -237,6 +239,7 @@
   "UPDATE_AVAILABLE": "Update available: VERSION",
   "USE_MODERN_NOW_PLAYING_SCREEN": "Use modern \"Now Playing Screen\" with dynamic backgrounds & time-synced lyrics",
   "USE_THESE_CHARACTERS_TO_SEPARATE_ARTISTS": "Use ; // / \\\\ or \\ to separate multiple artists.",
+  "VALUE": "Value",
   "VIDEO_SINGLE": "Video",
   "VISUALS": "Add or remove visuals visible during music playback",
   "VISUALS_TITLE": "Visuals",
