--- a/assets/translations/pt_BR.json
+++ b/assets/translations/pt_BR.json
@@ -51,6 +51,7 @@
   "COLLECTION_TRACK_PLAYLIST_REMOVE_DIALOG_BODY": "Remover \"TRACK_NAME\" de \"PLAYLIST_NAME\"?",
   "COMING_UP": "Chegando",
   "CONTROL_PANEL": "Painel de Controle",
+  "COPY_AS_JSON": "Copy as JSON",
   "COPY_LINK": "Copiar link",
   "CREATE": "Criar",
   "CREATE_NEW_PLAYLIST": "CRIAR NOVA PLAYLIST",
@@ -146,6 +147,7 @@
   "PLAY_URL": "Reproduzir URL",
   "PLAY_URL_SUBTITLE": "Insira a URL para o recurso de mídia",
   "PREVIOUS": "Anterior",
+  "PROPERTY": "Property",
   "PROXY_SUBTITLE": "Ativar proxy para recursos de mídia externos.",
   "PROXY_TITLE": "Proxy",
   "PROXY_URL": "URL do Proxy",
@@ -237,6 +239,7 @@
   "UPDATE_AVAILABLE": "Atualização disponível: VERSION",
   "USE_MODERN_NOW_PLAYING_SCREEN": "Use a moderna \"Tela Reproduzindo\" com planos de fundo dinâmicos e letras sincronizadas no tempo",
   "USE_THESE_CHARACTERS_TO_SEPARATE_ARTISTS": "Usar ; // / \\\\ ou \\ para separar vários artistas.",
+  "VALUE": "Value",
   "VIDEO_SINGLE": "Video",
   "VISUALS": "Adicione ou remova visuais visíveis durante a reprodução de música",
   "VISUALS_TITLE": "Visuals",
