--- a/assets/translations/ru_RU.json
+++ b/assets/translations/ru_RU.json
@@ -51,6 +51,7 @@
   "COLLECTION_TRACK_PLAYLIST_REMOVE_DIALOG_BODY": "Удалить \"TRACK_NAME\" из \"PLAYLIST_NAME\"?",
   "COMING_UP": "В очереди",
   "CONTROL_PANEL": "Панель управления",
+  "COPY_AS_JSON": "Copy as JSON",
   "COPY_LINK": "Копировать ссылку",
   "CREATE": "Создать",
   "CREATE_NEW_PLAYLIST": "СОЗДАТЬ НОВЫЙ ПЛЕЙЛИСТ",
@@ -146,6 +147,7 @@
   "PLAY_URL": "Воспроизвести URL",
   "PLAY_URL_SUBTITLE": "Введите ссылку на медиа ресурс",
   "PREVIOUS": "Назад",
+  "PROPERTY": "Property",
   "PROXY_SUBTITLE": "Использовать прокси для внешних медиа ресурсов.",
   "PROXY_TITLE": "Прокси",
   "PROXY_URL": "Ссылка на прокси",
@@ -237,6 +239,7 @@
   "UPDATE_AVAILABLE": "Доступно обновление: VERSION",
   "USE_MODERN_NOW_PLAYING_SCREEN": "Современный экран воспроизведения с динамическими обоями и текстами песен",
   "USE_THESE_CHARACTERS_TO_SEPARATE_ARTISTS": "Используйте ; // / \\\\ или \\ чтобы разделять исполнителей.",
+  "VALUE": "Value",
   "VIDEO_SINGLE": "Видео",
   "VISUALS": "Добавляйте или удаляйте фоны, видимые во время воспроизведения",
   "VISUALS_TITLE": "Фоны",
