--- a/assets/translations/zh_CN.json
+++ b/assets/translations/zh_CN.json
@@ -51,6 +51,7 @@
   "COLLECTION_TRACK_PLAYLIST_REMOVE_DIALOG_BODY": "从 \"PLAYLIST_NAME\" 中移除 \"TRACK_NAME\" 吗?",
   "COMING_UP": "当前播放",
   "CONTROL_PANEL": "Control Panel",
+  "COPY_AS_JSON": "Copy as JSON",
   "COPY_LINK": "复制链接",
   "CREATE": "创建",
   "CREATE_NEW_PLAYLIST": "创建新的播放列表",
@@ -146,6 +147,7 @@
   "PLAY_URL": "播放 URL",
   "PLAY_URL_SUBTITLE": "输入媒体资源的 URI",
   "PREVIOUS": "上一个",
+  "PROPERTY": "Property",
   "PROXY_SUBTITLE": "为外部媒体资源启用代理。",
   "PROXY_TITLE": "代理",
   "PROXY_URL": "代理 URL",
@@ -237,6 +239,7 @@
   "UPDATE_AVAILABLE": "可用更新：VERSION",
   "USE_MODERN_NOW_PLAYING_SCREEN": "Use modern \"Now Playing Screen\" with dynamic backgrounds & time-synced lyrics",
   "USE_THESE_CHARACTERS_TO_SEPARATE_ARTISTS": "Use ; // / \\\\ or \\ to separate multiple artists.",
+  "VALUE": "Value",
   "VIDEO_SINGLE": "视频",
   "VISUALS": "Add or remove visuals visible during music playback",
   "VISUALS_TITLE": "Visuals",
