chore(intl): update translations

--- a/assets/translations/de_DE.json
+++ b/assets/translations/de_DE.json
@@ -60,6 +60,7 @@
   "DELETE": "Löschen",
   "DELETE_TRACK": "Song löschen",
   "DESCENDING": "Absteigend",
+  "DISABLE_VOLUME_BOOST": "Disable volume boost",
   "DISCORD": "DISCORD SERVER",
   "DISCOVERING_FILES": "Finden von Dateien...",
   "DONATE": "Spenden",
@@ -131,6 +132,7 @@
   "OPTIONS": "Optionen",
   "ORDER": "Reihenfolge",
   "PAUSE": "Pause",
+  "PITCH": "Pitch",
   "PLAY": "Play",
   "PLAYLIST": "Playlist",
   "PLAYLISTS_CREATE": "neue Playlist erstellen",
@@ -216,6 +218,7 @@
   "SHOW_LYRICS": "Show lyrics",
   "SHOW_NOW_PLAYING_AFTER_PLAYING": "Zum Bildschirm \"Jetzt abspielen\" bei der Wiedergabe springen",
   "SHOW_NOW_PLAYING_AFTER_PLAYING_SUBTITLE": "Zeige \"Jetzt abspielen\" nachdem ein Titel zur Wiedergabe gewählt wurde",
+  "SHOW_NOW_PLAYING_SCREEN": "Show \"Now Playing Screen\"",
   "SHOW_TRACK_PROGRESS_ON_TASKBAR": "Taskleistenanzeige aktivieren",
   "SHOW_TRACK_PROGRESS_ON_TASKBAR_SUBTITLE": "Prozentuale Anzeige der Titelwiedergabe auf dem Anwendungssymbol in der Taskleiste",
   "SHUFFLE": "Shuffle",
@@ -243,6 +246,7 @@
   "VIDEO_SINGLE": "Video",
   "VISUALS": "Add or remove visuals visible during music playback",
   "VISUALS_TITLE": "Visuals",
+  "VOLUME_BOOST": "Volume Boost",
   "WARNING": "Warnung",
   "WEB": "YouTube Music",
   "WEB_INTERNET_ERROR": "Wir spielen Ihre lokale Musik, bis Sie wieder online sind..",
