--- a/assets/translations/hi_IN.json
+++ b/assets/translations/hi_IN.json
@@ -60,6 +60,7 @@
   "DELETE": "डिलीट",
   "DELETE_TRACK": "गाना डिलीट करें",
   "DESCENDING": "Descending",
+  "DISABLE_VOLUME_BOOST": "Disable volume boost",
   "DISCORD": "डिस्कॉर्ड सर्वर",
   "DISCOVERING_FILES": "Discovering files...",
   "DONATE": "Donate",
@@ -131,6 +132,7 @@
   "OPTIONS": "विकल्प",
   "ORDER": "Order",
   "PAUSE": "Pause",
+  "PITCH": "Pitch",
   "PLAY": "Play",
   "PLAYLIST": "Playlists",
   "PLAYLISTS_CREATE": "नयी प्लेलिस्ट बनायें",
@@ -216,6 +218,7 @@
   "SHOW_LYRICS": "Show lyrics",
   "SHOW_NOW_PLAYING_AFTER_PLAYING": "Jump to Now Playing Screen on play",
   "SHOW_NOW_PLAYING_AFTER_PLAYING_SUBTITLE": "Show \"Now Playing Screen\" after a track is selected for playing",
+  "SHOW_NOW_PLAYING_SCREEN": "Show \"Now Playing Screen\"",
   "SHOW_TRACK_PROGRESS_ON_TASKBAR": "Enable taskbar indicator",
   "SHOW_TRACK_PROGRESS_ON_TASKBAR_SUBTITLE": "Show track playback percentage on taskbar app icon",
   "SHUFFLE": "Shuffle",
@@ -243,6 +246,7 @@
   "VIDEO_SINGLE": "Video",
   "VISUALS": "Add or remove visuals visible during music playback",
   "VISUALS_TITLE": "Visuals",
+  "VOLUME_BOOST": "Volume Boost",
   "WARNING": "चेतावनी",
   "WEB": "YouTube Music",
   "WEB_INTERNET_ERROR": "जब तक आप वापस ऑनलाइन हो जाते हैं, तब तक हम आपका स्थानीय संगीत बजाते हैं।",
