--- a/assets/translations/id_ID.json
+++ b/assets/translations/id_ID.json
@@ -60,6 +60,7 @@
   "DELETE": "Hapus",
   "DELETE_TRACK": "Hapus trek",
   "DESCENDING": "Mennurun",
+  "DISABLE_VOLUME_BOOST": "Disable volume boost",
   "DISCORD": "SERVER DISCORD",
   "DISCOVERING_FILES": "Temukan File...",
   "DONATE": "Donasi",
@@ -131,6 +132,7 @@
   "OPTIONS": "Pengaturan",
   "ORDER": "Urutan",
   "PAUSE": "Jeda",
+  "PITCH": "Pitch",
   "PLAY": "Mainkan",
   "PLAYLIST": "Daftar putar",
   "PLAYLISTS_CREATE": "Buat daftar putar baru",
@@ -216,6 +218,7 @@
   "SHOW_LYRICS": "Show lyrics",
   "SHOW_NOW_PLAYING_AFTER_PLAYING": "Lompat ke layar lagu yang sedang dimainkan",
   "SHOW_NOW_PLAYING_AFTER_PLAYING_SUBTITLE": "Tunjukkan \"Layar lagu yang sedang dimainkan\" setelah sebuah trek dipilih",
+  "SHOW_NOW_PLAYING_SCREEN": "Show \"Now Playing Screen\"",
   "SHOW_TRACK_PROGRESS_ON_TASKBAR": "Aktifkan indikator taskbar",
   "SHOW_TRACK_PROGRESS_ON_TASKBAR_SUBTITLE": "Tunjukkan progres trek pada ikon aplikasi di taskbar",
   "SHUFFLE": "Acak",
@@ -243,6 +246,7 @@
   "VIDEO_SINGLE": "Video",
   "VISUALS": "Add or remove visuals visible during music playback",
   "VISUALS_TITLE": "Visuals",
+  "VOLUME_BOOST": "Volume Boost",
   "WARNING": "Peringatan",
   "WEB": "YouTube Musik",
   "WEB_INTERNET_ERROR": "Mainkan musik lokal anda sambil menghubungkan kembali ke internet.",
