--- a/assets/translations/ja_JP.json
+++ b/assets/translations/ja_JP.json
@@ -60,6 +60,7 @@
   "DELETE": "削除",
   "DELETE_TRACK": "トラックを削除",
   "DESCENDING": "降順",
+  "DISABLE_VOLUME_BOOST": "Disable volume boost",
   "DISCORD": "Discordサーバー",
   "DISCOVERING_FILES": "ファイルを探しています...",
   "DONATE": "寄付",
@@ -131,6 +132,7 @@
   "OPTIONS": "オプション",
   "ORDER": "順序",
   "PAUSE": "一時停止",
+  "PITCH": "Pitch",
   "PLAY": "再生",
   "PLAYLIST": "プレイリスト",
   "PLAYLISTS_CREATE": "新しいプレイリストを作成",
@@ -216,6 +218,7 @@
   "SHOW_LYRICS": "歌詞を表示",
   "SHOW_NOW_PLAYING_AFTER_PLAYING": "再生したら再生中画面にジャンプ",
   "SHOW_NOW_PLAYING_AFTER_PLAYING_SUBTITLE": "再生するトラックを選択したら\"再生中画面\"を表示する",
+  "SHOW_NOW_PLAYING_SCREEN": "Show \"Now Playing Screen\"",
   "SHOW_TRACK_PROGRESS_ON_TASKBAR": "タスクバーインジケーターを有効にする",
   "SHOW_TRACK_PROGRESS_ON_TASKBAR_SUBTITLE": "タスクバーのアプリアイコンに曲の再生位置を表示する",
   "SHUFFLE": "シャッフル",
@@ -243,6 +246,7 @@
   "VIDEO_SINGLE": "ビデオ",
   "VISUALS": "音楽再生中に表示できるビジュアルを追加または削除",
   "VISUALS_TITLE": "ビジュアル",
+  "VOLUME_BOOST": "Volume Boost",
   "WARNING": "注意",
   "WEB": "YouTube Music",
   "WEB_INTERNET_ERROR": "オンラインに復帰するまで端末の音楽を再生しましょう。",
