--- a/assets/translations/pt_BR.json
+++ b/assets/translations/pt_BR.json
@@ -60,6 +60,7 @@
   "DELETE": "Deletar",
   "DELETE_TRACK": "Deletar música",
   "DESCENDING": "Descendente",
+  "DISABLE_VOLUME_BOOST": "Disable volume boost",
   "DISCORD": "SERVIDOR DO DISCORD",
   "DISCOVERING_FILES": "Descobrindo arquivos...",
   "DONATE": "Doar",
@@ -131,6 +132,7 @@
   "OPTIONS": "Opções",
   "ORDER": "Pedido",
   "PAUSE": "Pausar",
+  "PITCH": "Pitch",
   "PLAY": "Reproduzir",
   "PLAYLIST": "Playlist",
   "PLAYLISTS_CREATE": "Criar uma nova lista de reprodução",
@@ -216,6 +218,7 @@
   "SHOW_LYRICS": "Mostrar letras",
   "SHOW_NOW_PLAYING_AFTER_PLAYING": "Pular para a Tela Em Execução ao reproduzir",
   "SHOW_NOW_PLAYING_AFTER_PLAYING_SUBTITLE": "Mostrar \"Tela Em Execução\" depois que uma faixa é selecionada para reprodução",
+  "SHOW_NOW_PLAYING_SCREEN": "Show \"Now Playing Screen\"",
   "SHOW_TRACK_PROGRESS_ON_TASKBAR": "Ativar indicador da barra de tarefas",
   "SHOW_TRACK_PROGRESS_ON_TASKBAR_SUBTITLE": "Mostrar a porcentagem de reprodução da faixa no ícone do aplicativo da barra de tarefas",
   "SHUFFLE": "Embaralhar",
@@ -243,6 +246,7 @@
   "VIDEO_SINGLE": "Video",
   "VISUALS": "Adicione ou remova visuais visíveis durante a reprodução de música",
   "VISUALS_TITLE": "Visuals",
+  "VOLUME_BOOST": "Volume Boost",
   "WARNING": "Aviso",
   "WEB": "YouTube Music",
   "WEB_INTERNET_ERROR": "Vamos tocar sua música local, enquanto você fica online novamente..",
