--- a/assets/translations/ru_RU.json
+++ b/assets/translations/ru_RU.json
@@ -60,6 +60,7 @@
   "DELETE": "Удалить",
   "DELETE_TRACK": "Удалить трек",
   "DESCENDING": "По убыванию",
+  "DISABLE_VOLUME_BOOST": "Disable volume boost",
   "DISCORD": "DISCORD СЕРВЕР",
   "DISCOVERING_FILES": "Поиск файлов...",
   "DONATE": "Пожертвовать",
@@ -131,6 +132,7 @@
   "OPTIONS": "Параметры",
   "ORDER": "Порядок",
   "PAUSE": "Пауза",
+  "PITCH": "Pitch",
   "PLAY": "Плей",
   "PLAYLIST": "Плейлисты",
   "PLAYLISTS_CREATE": "Создать плейлист",
@@ -216,6 +218,7 @@
   "SHOW_LYRICS": "Показать текст",
   "SHOW_NOW_PLAYING_AFTER_PLAYING": "Автоматически открывать экран воспроизведения",
   "SHOW_NOW_PLAYING_AFTER_PLAYING_SUBTITLE": "Показывать экран воспроизведения при открытии трека",
+  "SHOW_NOW_PLAYING_SCREEN": "Show \"Now Playing Screen\"",
   "SHOW_TRACK_PROGRESS_ON_TASKBAR": "Индикатор на панели задач",
   "SHOW_TRACK_PROGRESS_ON_TASKBAR_SUBTITLE": "Показывать прогресс воспроизведения на панели задач",
   "SHUFFLE": "Перемешивать",
@@ -243,6 +246,7 @@
   "VIDEO_SINGLE": "Видео",
   "VISUALS": "Добавляйте или удаляйте фоны, видимые во время воспроизведения",
   "VISUALS_TITLE": "Фоны",
+  "VOLUME_BOOST": "Volume Boost",
   "WARNING": "Предупреждение",
   "WEB": "YouTube Music",
   "WEB_INTERNET_ERROR": "Пока можете послушать локальную музыку.",
