--- a/assets/translations/zh_CN.json
+++ b/assets/translations/zh_CN.json
@@ -60,6 +60,7 @@
   "DELETE": "删除",
   "DELETE_TRACK": "删除歌曲",
   "DESCENDING": "降序",
+  "DISABLE_VOLUME_BOOST": "Disable volume boost",
   "DISCORD": "DISCORD 服务器",
   "DISCOVERING_FILES": "正在发现文件...",
   "DONATE": "捐赠",
@@ -131,6 +132,7 @@
   "OPTIONS": "选项",
   "ORDER": "顺序",
   "PAUSE": "暂停",
+  "PITCH": "Pitch",
   "PLAY": "播放",
   "PLAYLIST": "播放列表",
   "PLAYLISTS_CREATE": "创建一个新播放列表",
@@ -216,6 +218,7 @@
   "SHOW_LYRICS": "Show lyrics",
   "SHOW_NOW_PLAYING_AFTER_PLAYING": "跳转到正在播放的屏幕",
   "SHOW_NOW_PLAYING_AFTER_PLAYING_SUBTITLE": "选择要播放的曲目后显示“正在播放屏幕”",
+  "SHOW_NOW_PLAYING_SCREEN": "Show \"Now Playing Screen\"",
   "SHOW_TRACK_PROGRESS_ON_TASKBAR": "启用任务栏指示器",
   "SHOW_TRACK_PROGRESS_ON_TASKBAR_SUBTITLE": "在任务栏应用程序图标上显示曲目播放百分比",
   "SHUFFLE": "随机播放",
@@ -243,6 +246,7 @@
   "VIDEO_SINGLE": "视频",
   "VISUALS": "Add or remove visuals visible during music playback",
   "VISUALS_TITLE": "Visuals",
+  "VOLUME_BOOST": "Volume Boost",
   "WARNING": "警告",
   "WEB": "YouTube 音乐",
   "WEB_INTERNET_ERROR": "当前离线中，播放一些本地音乐吧。",
