--- a/assets/translations/az_AZ.json
+++ b/assets/translations/az_AZ.json
@@ -60,6 +60,7 @@
   "DELETE": "Sil",
   "DELETE_TRACK": "Musiqini sil",
   "DESCENDING": "Azalan",
+  "DISABLE_VOLUME_BOOST": "Disable volume boost",
   "DISCORD": "DISCORD SUNUCUSU",
   "DISCOVERING_FILES": "Discovering files...",
   "DONATE": "Donate",
@@ -131,6 +132,7 @@
   "OPTIONS": "Seçimlər",
   "ORDER": "Sıra",
   "PAUSE": "Dayandır",
+  "PITCH": "Pitch",
   "PLAY": "Oynat",
   "PLAYLIST": "Oynatma sıraları",
   "PLAYLISTS_CREATE": "Oynatma sırası yarat",
@@ -216,6 +218,7 @@
   "SHOW_LYRICS": "Show lyrics",
   "SHOW_NOW_PLAYING_AFTER_PLAYING": "Jump to Now Playing Screen on play",
   "SHOW_NOW_PLAYING_AFTER_PLAYING_SUBTITLE": "Show \"Now Playing Screen\" after a track is selected for playing",
+  "SHOW_NOW_PLAYING_SCREEN": "Show \"Now Playing Screen\"",
   "SHOW_TRACK_PROGRESS_ON_TASKBAR": "Enable taskbar indicator",
   "SHOW_TRACK_PROGRESS_ON_TASKBAR_SUBTITLE": "Show track playback percentage on taskbar app icon",
   "SHUFFLE": "Qarışdır",
@@ -243,6 +246,7 @@
   "VIDEO_SINGLE": "Video",
   "VISUALS": "Add or remove visuals visible during music playback",
   "VISUALS_TITLE": "Visuals",
+  "VOLUME_BOOST": "Volume Boost",
   "WARNING": "BİLDİRİŞ",
   "WEB": "YouTube Music",
   "WEB_INTERNET_ERROR": "Onlayn olana qədər cihazındakı bir musiqini oynata bilərsən.",
