--- a/assets/translations/fr_FR.json
+++ b/assets/translations/fr_FR.json
@@ -60,6 +60,7 @@
   "DELETE": "Supprimer",
   "DELETE_TRACK": "Supprimer la piste",
   "DESCENDING": "Descendant",
+  "DISABLE_VOLUME_BOOST": "Disable volume boost",
   "DISCORD": "Serveur Discord",
   "DISCOVERING_FILES": "Découverte des fichiers...",
   "DONATE": "Faire un don",
@@ -131,6 +132,7 @@
   "OPTIONS": "Options",
   "ORDER": "Ordre",
   "PAUSE": "Pause",
+  "PITCH": "Pitch",
   "PLAY": "Lire",
   "PLAYLIST": "Playlists",
   "PLAYLISTS_CREATE": "Créer une nouvelle playlist",
@@ -216,6 +218,7 @@
   "SHOW_LYRICS": "Show lyrics",
   "SHOW_NOW_PLAYING_AFTER_PLAYING": "Basculer sur l'écran \"En cours de lecture\" lors de la lecture",
   "SHOW_NOW_PLAYING_AFTER_PLAYING_SUBTITLE": "Afficher l'écran \"En cours de lecture\" après la sélection d'une piste pour lecture",
+  "SHOW_NOW_PLAYING_SCREEN": "Show \"Now Playing Screen\"",
   "SHOW_TRACK_PROGRESS_ON_TASKBAR": "Activer l'icône dans la barre des tâches",
   "SHOW_TRACK_PROGRESS_ON_TASKBAR_SUBTITLE": "Afficher le pourcentage de lecture de la piste dans l'icône de la barre des tâches",
   "SHUFFLE": "Aléatoire",
@@ -243,6 +246,7 @@
   "VIDEO_SINGLE": "Vidéo",
   "VISUALS": "Add or remove visuals visible during music playback",
   "VISUALS_TITLE": "Visuals",
+  "VOLUME_BOOST": "Volume Boost",
   "WARNING": "Attention",
   "WEB": "YouTube Music",
   "WEB_INTERNET_ERROR": "Lire votre musique locale en attendant d'être à nouveau connecté.",
