--- a/assets/translations/sl_SI.json
+++ b/assets/translations/sl_SI.json
@@ -60,6 +60,7 @@
   "DELETE": "Izbriši",
   "DELETE_TRACK": "Izbriši pesem",
   "DESCENDING": "Po abecedi nazaj",
+  "DISABLE_VOLUME_BOOST": "Disable volume boost",
   "DISCORD": "DISCORD STREŽNIK",
   "DISCOVERING_FILES": "Odkrivam datoteke...",
   "DONATE": "Donate",
@@ -131,6 +132,7 @@
   "OPTIONS": "Možnosti",
   "ORDER": "Vrstni red",
   "PAUSE": "Ustavi",
+  "PITCH": "Pitch",
   "PLAY": "Predvajaj",
   "PLAYLIST": "Seznami predvajanja",
   "PLAYLISTS_CREATE": "Ustvari seznam predvajanja",
@@ -216,6 +218,7 @@
   "SHOW_LYRICS": "Show lyrics",
   "SHOW_NOW_PLAYING_AFTER_PLAYING": "Avtomatično preskoči na \"Now playing\" zaslon ko se predvaja pesem",
   "SHOW_NOW_PLAYING_AFTER_PLAYING_SUBTITLE": "Show \"Now Playing Screen\" after a track is selected for playing",
+  "SHOW_NOW_PLAYING_SCREEN": "Show \"Now Playing Screen\"",
   "SHOW_TRACK_PROGRESS_ON_TASKBAR": "Enable taskbar indicator",
   "SHOW_TRACK_PROGRESS_ON_TASKBAR_SUBTITLE": "Show track playback percentage on taskbar app icon",
   "SHUFFLE": "Naključno mešaj",
@@ -243,6 +246,7 @@
   "VIDEO_SINGLE": "Video",
   "VISUALS": "Add or remove visuals visible during music playback",
   "VISUALS_TITLE": "Visuals",
+  "VOLUME_BOOST": "Volume Boost",
   "WARNING": "Opozorilo",
   "WEB": "YouTube Music",
   "WEB_INTERNET_ERROR": "Predvajajmo lokalno glasbo, medtem ko ni internetne povezave.",
