chore: make subtitle string more explainatory

--- a/assets/translations/en_US.json
+++ b/assets/translations/en_US.json
@@ -194,7 +194,7 @@
   "SETTING_GITHUB": "GITHUB",
   "SETTING_INDEXING_DONE": "Indexed",
   "SETTING_INDEXING_LINEAR_PROGRESS_INDICATOR": "Indexed NUMBER_STRING of TOTAL_STRING tracks...",
-  "SETTING_INDEXING_SUBTITLE": "Include more folders in your collection",
+  "SETTING_INDEXING_SUBTITLE": "Include more folders in your music collection",
   "SETTING_INDEXING_TITLE": "Collection",
   "SETTING_INDEXING_WARNING": "Do not interrupt the process.",
   "SETTING_LANGUAGE_PROVIDERS_SUBTITLE": "Thanks a lot for your support to the app.",
