chore(intl): add new translations

--- a/assets/translations/fr_FR.json
+++ b/assets/translations/fr_FR.json
@@ -82,6 +82,7 @@
   "EXPERIMENTAL": "Expérimental",
   "EXPERIMENTAL_SUBTITLE": "Ces paramètres ne sont pas marqués comme étant stables.",
   "FILE_INFORMATION": "File information",
+  "FILE_PATH_OR_URL": "Enter file path or URL",
   "FOLDERS_NOT_FOUND": "Few of the folders from your collection could not be located.\nPlease ensure the presence & re-start the app, or remove these folders before proceeding:",
   "FOLDER_NOT_FOUND": "This folder could not be located",
   "FULLSCREEN": "Enter fullscreen",
@@ -153,6 +154,8 @@
   "PROXY_SUBTITLE": "Activer le proxy pour les ressources média externes.",
   "PROXY_TITLE": "Proxy",
   "PROXY_URL": "URL du proxy",
+  "READ": "Read",
+  "READ_METADATA": "Read metadata",
   "RECOMMENDATIONS": "Recommandations",
   "REFRESH": "Actualiser",
   "REFRESH_INFORMATION": "Vérifier uniquement les fichiers ajoutés et supprimés pour mettre à jour la bibliothèque musicale (plus rapide)",
@@ -228,10 +231,12 @@
   "STARTING_PLAYBACK": "Début de lecture",
   "STATS_SUBTITLE": "Statistical details about your music library",
   "STATS_TITLE": "Stats",
+  "STREAM": "Stream",
   "SWITCH_THEME": "Changer de thème",
   "THEME_MODE_DARK": "Sombre",
   "THEME_MODE_LIGHT": "Clair",
   "THEME_MODE_SYSTEM": "Identique au système",
+  "TIMEOUT": "Timeout",
   "TRACK": "Pistes",
   "TRACKS_FROM_ARTIST": "Chansons de cet artiste",
   "TRACK_NUMBER": "Track Number",
