--- a/assets/translations/ja_JP.json
+++ b/assets/translations/ja_JP.json
@@ -82,6 +82,7 @@
   "EXPERIMENTAL": "実験的",
   "EXPERIMENTAL_SUBTITLE": "これらの設定は実験的なものです",
   "FILE_INFORMATION": "File information",
+  "FILE_PATH_OR_URL": "Enter file path or URL",
   "FOLDERS_NOT_FOUND": "あなたのコレクションからいくつかのフォルダが見つかりませんでした。\n存在することを確認してアプリを再起動するか、続行する前にこれらのフォルダを削除してください:",
   "FOLDER_NOT_FOUND": "このフォルダは見つかりませんでした",
   "FULLSCREEN": "フルスクリーンにする",
@@ -153,6 +154,8 @@
   "PROXY_SUBTITLE": "外部メディアリソースのためのプロキシを有効にします",
   "PROXY_TITLE": "プロキシ",
   "PROXY_URL": "プロキシURL",
+  "READ": "Read",
+  "READ_METADATA": "Read metadata",
   "RECOMMENDATIONS": "おすすめ",
   "REFRESH": "リフレッシュ",
   "REFRESH_INFORMATION": "新しく追加されたファイルや削除されたファイルのみチェックし、音楽ライブラリを更新します [高速]",
@@ -228,10 +231,12 @@
   "STARTING_PLAYBACK": "再生開始",
   "STATS_SUBTITLE": "あなたの音楽ライブラリについての統計的な詳細",
   "STATS_TITLE": "統計",
+  "STREAM": "Stream",
   "SWITCH_THEME": "テーマを変更",
   "THEME_MODE_DARK": "ダーク",
   "THEME_MODE_LIGHT": "ライト",
   "THEME_MODE_SYSTEM": "システム",
+  "TIMEOUT": "Timeout",
   "TRACK": "トラック",
   "TRACKS_FROM_ARTIST": "トラック",
   "TRACK_NUMBER": "トラック番号",
