--- a/assets/translations/mg_MG.json
+++ b/assets/translations/mg_MG.json
@@ -82,6 +82,7 @@
   "EXPERIMENTAL": "Experimental",
   "EXPERIMENTAL_SUBTITLE": "These settings are not marked as stable yet",
   "FILE_INFORMATION": "File information",
+  "FILE_PATH_OR_URL": "Enter file path or URL",
   "FOLDERS_NOT_FOUND": "Few of the folders from your collection could not be located.\nPlease ensure the presence & re-start the app, or remove these folders before proceeding:",
   "FOLDER_NOT_FOUND": "This folder could not be located",
   "FULLSCREEN": "Enter fullscreen",
@@ -153,6 +154,8 @@
   "PROXY_SUBTITLE": "Enable proxy for external media resources.",
   "PROXY_TITLE": "Proxy",
   "PROXY_URL": "Proxy URL",
+  "READ": "Read",
+  "READ_METADATA": "Read metadata",
   "RECOMMENDATIONS": "Tolo-kevitra",
   "REFRESH": "Havaozina",
   "REFRESH_INFORMATION": "Just checks for the newly added & deleted files to update the music library [faster].",
@@ -228,10 +231,12 @@
   "STARTING_PLAYBACK": "Fanombohana ny famakiana",
   "STATS_SUBTITLE": "Statistical details about your music library",
   "STATS_TITLE": "Stats",
+  "STREAM": "Stream",
   "SWITCH_THEME": "Hanova lohahevitra",
   "THEME_MODE_DARK": "Maizina",
   "THEME_MODE_LIGHT": "Mazava",
   "THEME_MODE_SYSTEM": "System",
+  "TIMEOUT": "Timeout",
   "TRACK": "Mozika",
   "TRACKS_FROM_ARTIST": "Hiranity mpanakanto ity.",
   "TRACK_NUMBER": "Track Number",
