--- a/assets/translations/pt_BR.json
+++ b/assets/translations/pt_BR.json
@@ -82,6 +82,7 @@
   "EXPERIMENTAL": "Experimental",
   "EXPERIMENTAL_SUBTITLE": "Essas configurações ainda não estão marcadas como estáveis",
   "FILE_INFORMATION": "File information",
+  "FILE_PATH_OR_URL": "Enter file path or URL",
   "FOLDERS_NOT_FOUND": "Algumas pastas da sua coleção não puderam ser localizadas.\nVerifique se elas existem e reinicie o aplicativo ou remova essas pastas antes de continuar:",
   "FOLDER_NOT_FOUND": "Esta pasta não pôde ser localizada",
   "FULLSCREEN": "Entrar em tela cheia",
@@ -153,6 +154,8 @@
   "PROXY_SUBTITLE": "Ativar proxy para recursos de mídia externos.",
   "PROXY_TITLE": "Proxy",
   "PROXY_URL": "URL do Proxy",
+  "READ": "Read",
+  "READ_METADATA": "Read metadata",
   "RECOMMENDATIONS": "Recomendações",
   "REFRESH": "Atualizar",
   "REFRESH_INFORMATION": "Apenas verifica os novos arquivos adicionados e excluídos para atualizar a biblioteca de músicas (mais rápido)",
@@ -228,10 +231,12 @@
   "STARTING_PLAYBACK": "Iniciando a reprodução",
   "STATS_SUBTITLE": "Detalhes estatísticos sobre sua biblioteca de músicas",
   "STATS_TITLE": "Estatísticas",
+  "STREAM": "Stream",
   "SWITCH_THEME": "Trocar tema",
   "THEME_MODE_DARK": "Escuro",
   "THEME_MODE_LIGHT": "Claro",
   "THEME_MODE_SYSTEM": "Sistema",
+  "TIMEOUT": "Timeout",
   "TRACK": "Músicas",
   "TRACKS_FROM_ARTIST": "Faixas deste artista.",
   "TRACK_NUMBER": "Número de Faixa",
