--- a/assets/translations/ru_RU.json
+++ b/assets/translations/ru_RU.json
@@ -82,6 +82,7 @@
   "EXPERIMENTAL": "Экспериментальные",
   "EXPERIMENTAL_SUBTITLE": "Эти настройки пока что нестабильны",
   "FILE_INFORMATION": "File information",
+  "FILE_PATH_OR_URL": "Enter file path or URL",
   "FOLDERS_NOT_FOUND": "Не удалось найти некоторые папки из Вашей коллекции.\nПожалуйста, убедитесь в их наличии и перезапустите приложение или удалите эти папки, прежде чем продолжить:",
   "FOLDER_NOT_FOUND": "Указанная папка не найдена",
   "FULLSCREEN": "Войти в полноэкранный режим",
@@ -153,6 +154,8 @@
   "PROXY_SUBTITLE": "Использовать прокси для внешних медиа ресурсов.",
   "PROXY_TITLE": "Прокси",
   "PROXY_URL": "Ссылка на прокси",
+  "READ": "Read",
+  "READ_METADATA": "Read metadata",
   "RECOMMENDATIONS": "Рекомендации",
   "REFRESH": "Обновить",
   "REFRESH_INFORMATION": "Проверить недавно добавленные и удаленные файлы для обновления библиотеки [быстрее].",
@@ -228,10 +231,12 @@
   "STARTING_PLAYBACK": "Воспроизведение",
   "STATS_SUBTITLE": "Статистика Вашей музыкальной библиотеки",
   "STATS_TITLE": "Статистика",
+  "STREAM": "Stream",
   "SWITCH_THEME": "Сменить тему",
   "THEME_MODE_DARK": "Тёмная",
   "THEME_MODE_LIGHT": "Светлая",
   "THEME_MODE_SYSTEM": "Как в системе",
+  "TIMEOUT": "Timeout",
   "TRACK": "Треки",
   "TRACKS_FROM_ARTIST": "Треки",
   "TRACK_NUMBER": "Номер трека",
