--- a/assets/translations/zh_CN.json
+++ b/assets/translations/zh_CN.json
@@ -82,6 +82,7 @@
   "EXPERIMENTAL": "实验性",
   "EXPERIMENTAL_SUBTITLE": "这些设置尚未标记为稳定",
   "FILE_INFORMATION": "File information",
+  "FILE_PATH_OR_URL": "Enter file path or URL",
   "FOLDERS_NOT_FOUND": "Few of the folders from your collection could not be located.\nPlease ensure the presence & re-start the app, or remove these folders before proceeding:",
   "FOLDER_NOT_FOUND": "This folder could not be located",
   "FULLSCREEN": "Enter fullscreen",
@@ -153,6 +154,8 @@
   "PROXY_SUBTITLE": "为外部媒体资源启用代理。",
   "PROXY_TITLE": "代理",
   "PROXY_URL": "代理 URL",
+  "READ": "Read",
+  "READ_METADATA": "Read metadata",
   "RECOMMENDATIONS": "推荐",
   "REFRESH": "刷新",
   "REFRESH_INFORMATION": "仅检查新添加或删除的文件即可更新音乐库（更快）",
@@ -228,10 +231,12 @@
   "STARTING_PLAYBACK": "开始播放",
   "STATS_SUBTITLE": "有关您的音乐库的统计详细信息",
   "STATS_TITLE": "统计",
+  "STREAM": "Stream",
   "SWITCH_THEME": "切换主题",
   "THEME_MODE_DARK": "深色",
   "THEME_MODE_LIGHT": "浅色",
   "THEME_MODE_SYSTEM": "跟随系统",
+  "TIMEOUT": "Timeout",
   "TRACK": "歌曲",
   "TRACKS_FROM_ARTIST": "来自该艺术家的歌曲。",
   "TRACK_NUMBER": "Track Number",
