--- a/assets/translations/de_DE.json
+++ b/assets/translations/de_DE.json
@@ -82,6 +82,7 @@
   "EXPERIMENTAL": "Experimentell",
   "EXPERIMENTAL_SUBTITLE": "Diese Einstellungen sind noch nicht als konstant(stable) markiert",
   "FILE_INFORMATION": "File information",
+  "FILE_PATH_OR_URL": "Enter file path or URL",
   "FOLDERS_NOT_FOUND": "Few of the folders from your collection could not be located.\nPlease ensure the presence & re-start the app, or remove these folders before proceeding:",
   "FOLDER_NOT_FOUND": "This folder could not be located",
   "FULLSCREEN": "Enter fullscreen",
@@ -153,6 +154,8 @@
   "PROXY_SUBTITLE": "Proxy für externe Medienquellen einschalten.",
   "PROXY_TITLE": "Proxy",
   "PROXY_URL": "Proxy URL",
+  "READ": "Read",
+  "READ_METADATA": "Read metadata",
   "RECOMMENDATIONS": "Empfehlungen",
   "REFRESH": "Aktualisieren",
   "REFRESH_INFORMATION": "Überprüft die neu hinzugefügten & gelöschten Dateien und aktualisiert die Musikbibliothek [schneller]",
@@ -228,10 +231,12 @@
   "STARTING_PLAYBACK": "Wiedergabe starten",
   "STATS_SUBTITLE": "Statistische Informationen zu Ihrer Musikbibliothek",
   "STATS_TITLE": "Statistiken",
+  "STREAM": "Stream",
   "SWITCH_THEME": "Theme ändern",
   "THEME_MODE_DARK": "Dunkel",
   "THEME_MODE_LIGHT": "Hell",
   "THEME_MODE_SYSTEM": "System",
+  "TIMEOUT": "Timeout",
   "TRACK": "Songs",
   "TRACKS_FROM_ARTIST": "Songs von diesen Künstler.",
   "TRACK_NUMBER": "Track Number",
