--- a/assets/translations/id_ID.json
+++ b/assets/translations/id_ID.json
@@ -82,6 +82,7 @@
   "EXPERIMENTAL": "Experimental",
   "EXPERIMENTAL_SUBTITLE": "Pengaturan ini belum ditandai sebagai pengaturan stabil.",
   "FILE_INFORMATION": "File information",
+  "FILE_PATH_OR_URL": "Enter file path or URL",
   "FOLDERS_NOT_FOUND": "Few of the folders from your collection could not be located.\nPlease ensure the presence & re-start the app, or remove these folders before proceeding:",
   "FOLDER_NOT_FOUND": "This folder could not be located",
   "FULLSCREEN": "Enter fullscreen",
@@ -153,6 +154,8 @@
   "PROXY_SUBTITLE": "Aktifkan proxy untuk sumber media external.",
   "PROXY_TITLE": "Proxy",
   "PROXY_URL": "Proxy URL",
+  "READ": "Read",
+  "READ_METADATA": "Read metadata",
   "RECOMMENDATIONS": "Rekomendasi",
   "REFRESH": "Segarkan",
   "REFRESH_INFORMATION": "Hanya cek file musik yang baru ditambahkan dan dihapus untuk memperbarui perpustakaan musik (lebih cepat)",
@@ -228,10 +231,12 @@
   "STARTING_PLAYBACK": "Memulai playback",
   "STATS_SUBTITLE": "Statistical details about your music library",
   "STATS_TITLE": "Stats",
+  "STREAM": "Stream",
   "SWITCH_THEME": "Ganti Tema",
   "THEME_MODE_DARK": "Gelap",
   "THEME_MODE_LIGHT": "Terang",
   "THEME_MODE_SYSTEM": "Sistem",
+  "TIMEOUT": "Timeout",
   "TRACK": "Trek",
   "TRACKS_FROM_ARTIST": "Trek",
   "TRACK_NUMBER": "Track Number",
