--- a/assets/translations/sl_SI.json
+++ b/assets/translations/sl_SI.json
@@ -82,6 +82,7 @@
   "EXPERIMENTAL": "Eksperimentalno",
   "EXPERIMENTAL_SUBTITLE": "Te nastavitve še niso stabilne.",
   "FILE_INFORMATION": "File information",
+  "FILE_PATH_OR_URL": "Enter file path or URL",
   "FOLDERS_NOT_FOUND": "Few of the folders from your collection could not be located.\nPlease ensure the presence & re-start the app, or remove these folders before proceeding:",
   "FOLDER_NOT_FOUND": "This folder could not be located",
   "FULLSCREEN": "Enter fullscreen",
@@ -153,6 +154,8 @@
   "PROXY_SUBTITLE": "Enable proxy for external media resources.",
   "PROXY_TITLE": "Proxy strežnik",
   "PROXY_URL": "Proxy URL",
+  "READ": "Read",
+  "READ_METADATA": "Read metadata",
   "RECOMMENDATIONS": "Priporočeno",
   "REFRESH": "OSVEŽI",
   "REFRESH_INFORMATION": "Samo preveri za nove & izbrisane datoteke za posodobitev glasbene zbirke [hitreje]",
@@ -228,10 +231,12 @@
   "STARTING_PLAYBACK": "Začenjam predvajanje",
   "STATS_SUBTITLE": "Statistical details about your music library",
   "STATS_TITLE": "Stats",
+  "STREAM": "Stream",
   "SWITCH_THEME": "Zamenjaj temo",
   "THEME_MODE_DARK": "Temni",
   "THEME_MODE_LIGHT": "Svetli",
   "THEME_MODE_SYSTEM": "Sistemska nastavitev",
+  "TIMEOUT": "Timeout",
   "TRACK": "Pesmi",
   "TRACKS_FROM_ARTIST": "Pesmi od tega ustvarjalca.",
   "TRACK_NUMBER": "Track Number",
