chore(intl): update translations

--- a/assets/translations/az_AZ.json
+++ b/assets/translations/az_AZ.json
@@ -91,6 +91,7 @@
   "HIDE": "Hide",
   "HIDE_LYRICS": "Hide lyrics",
   "HIGHLIGHTED_LYRICS_SIZE": "Highlighted Lyrics Size",
+  "IMAGES": "Images",
   "IMPORT_PLAYLIST_FROM_WEB": "Import from YouTube Music",
   "IMPORT_PLAYLIST_SUBTITLE": "Enter the playlist URL",
   "IMPORT_PLAYLIST_TITLE": "Import Playlist",
