--- a/assets/translations/ja_JP.json
+++ b/assets/translations/ja_JP.json
@@ -91,6 +91,7 @@
   "HIDE": "非表示",
   "HIDE_LYRICS": "歌詞を非表示",
   "HIGHLIGHTED_LYRICS_SIZE": "ハイライトされている歌詞のサイズ",
+  "IMAGES": "Images",
   "IMPORT_PLAYLIST_FROM_WEB": "YouTube Musicからインポート",
   "IMPORT_PLAYLIST_SUBTITLE": "プレイリストのURLを入力",
   "IMPORT_PLAYLIST_TITLE": "プレイリストをインポート",
