--- a/assets/translations/pt_BR.json
+++ b/assets/translations/pt_BR.json
@@ -91,6 +91,7 @@
   "HIDE": "Hide",
   "HIDE_LYRICS": "Ocultar letras",
   "HIGHLIGHTED_LYRICS_SIZE": "Highlighted Lyrics Size",
+  "IMAGES": "Images",
   "IMPORT_PLAYLIST_FROM_WEB": "Importar do YouTube Music",
   "IMPORT_PLAYLIST_SUBTITLE": "Insira o URL da playlist",
   "IMPORT_PLAYLIST_TITLE": "Importar Playlist",
