--- a/assets/translations/ru_RU.json
+++ b/assets/translations/ru_RU.json
@@ -91,6 +91,7 @@
   "HIDE": "Hide",
   "HIDE_LYRICS": "Скрыть текст",
   "HIGHLIGHTED_LYRICS_SIZE": "Размер подсвеченых строк",
+  "IMAGES": "Images",
   "IMPORT_PLAYLIST_FROM_WEB": "Импорт из YouTube Music",
   "IMPORT_PLAYLIST_SUBTITLE": "Введите URL плейлиста",
   "IMPORT_PLAYLIST_TITLE": "Импорт плейлиста",
