chore(intl): update translations

--- a/assets/translations/az_AZ.json
+++ b/assets/translations/az_AZ.json
@@ -134,6 +134,7 @@
   "OPTIONS": "Seçimlər",
   "ORDER": "Sıra",
   "PAUSE": "Dayandır",
+  "PHONE": "Phone",
   "PITCH": "Pitch",
   "PLAY": "Oynat",
   "PLAYLIST": "Oynatma sıraları",
@@ -178,6 +179,7 @@
   "SAVE": "Save",
   "SAVE_AS_PLAYLIST": "Save as playlist",
   "SAVE_TO_DOWNLOADS": "Yüklənənlərə qeyd et",
+  "SD_CARD": "SD Card",
   "SEARCH": "Axtar",
   "SEARCH_COLLECTION": "Kolleksiya axtar",
   "SEARCH_HISTORY_SUBHEADER": "Son axtarışların",
