--- a/assets/translations/de_DE.json
+++ b/assets/translations/de_DE.json
@@ -134,6 +134,7 @@
   "OPTIONS": "Optionen",
   "ORDER": "Reihenfolge",
   "PAUSE": "Pause",
+  "PHONE": "Phone",
   "PITCH": "Pitch",
   "PLAY": "Play",
   "PLAYLIST": "Playlist",
@@ -178,6 +179,7 @@
   "SAVE": "Save",
   "SAVE_AS_PLAYLIST": "als Playlist speichern",
   "SAVE_TO_DOWNLOADS": "unter Downloads speichern",
+  "SD_CARD": "SD Card",
   "SEARCH": "Suchen",
   "SEARCH_COLLECTION": "Sammlung durchsuchen",
   "SEARCH_HISTORY_SUBHEADER": "Ihre letzten Suchen",
