--- a/assets/translations/en_US.json
+++ b/assets/translations/en_US.json
@@ -134,6 +134,7 @@
   "OPTIONS": "Options",
   "ORDER": "Order",
   "PAUSE": "Pause",
+  "PHONE": "Phone",
   "PITCH": "Pitch",
   "PLAY": "Play",
   "PLAYLIST": "Playlists",
@@ -178,6 +179,7 @@
   "SAVE": "Save",
   "SAVE_AS_PLAYLIST": "Save as playlist",
   "SAVE_TO_DOWNLOADS": "Save to downloads",
+  "SD_CARD": "SD Card",
   "SEARCH": "Search",
   "SEARCH_COLLECTION": "Search collection",
   "SEARCH_HISTORY_SUBHEADER": "Your recent searches",
