--- a/assets/translations/fa_IR.json
+++ b/assets/translations/fa_IR.json
@@ -134,6 +134,7 @@
   "OPTIONS": "گزینه‌ها",
   "ORDER": "ترتیب",
   "PAUSE": "توقف",
+  "PHONE": "Phone",
   "PITCH": "Pitch",
   "PLAY": "شروع",
   "PLAYLIST": "لیست‌های پخش",
@@ -178,6 +179,7 @@
   "SAVE": "Save",
   "SAVE_AS_PLAYLIST": "Save as playlist",
   "SAVE_TO_DOWNLOADS": "ذخیره در دانلود‌ها",
+  "SD_CARD": "SD Card",
   "SEARCH": "جستجو",
   "SEARCH_COLLECTION": "جستجو در مجموعه",
   "SEARCH_HISTORY_SUBHEADER": "جستجوهای اخیر",
