--- a/assets/translations/fr_FR.json
+++ b/assets/translations/fr_FR.json
@@ -134,6 +134,7 @@
   "OPTIONS": "Options",
   "ORDER": "Ordre",
   "PAUSE": "Pause",
+  "PHONE": "Phone",
   "PITCH": "Pitch",
   "PLAY": "Lire",
   "PLAYLIST": "Playlists",
@@ -178,6 +179,7 @@
   "SAVE": "Save",
   "SAVE_AS_PLAYLIST": "Enregistrer comme playlist",
   "SAVE_TO_DOWNLOADS": "Enregistrer dans les téléchargements",
+  "SD_CARD": "SD Card",
   "SEARCH": "Recherche",
   "SEARCH_COLLECTION": "Recherche d'une collection",
   "SEARCH_HISTORY_SUBHEADER": "Historique des recherches",
