--- a/assets/translations/hi_IN.json
+++ b/assets/translations/hi_IN.json
@@ -134,6 +134,7 @@
   "OPTIONS": "विकल्प",
   "ORDER": "Order",
   "PAUSE": "Pause",
+  "PHONE": "Phone",
   "PITCH": "Pitch",
   "PLAY": "Play",
   "PLAYLIST": "Playlists",
@@ -178,6 +179,7 @@
   "SAVE": "Save",
   "SAVE_AS_PLAYLIST": "Save as playlist",
   "SAVE_TO_DOWNLOADS": "डौन्लोडस में सेव करें",
+  "SD_CARD": "SD Card",
   "SEARCH": "खोज़े",
   "SEARCH_COLLECTION": "कलेक्शन में ढूंढें",
   "SEARCH_HISTORY_SUBHEADER": "आपके पिछले खोज",
