--- a/assets/translations/hu_HU.json
+++ b/assets/translations/hu_HU.json
@@ -134,6 +134,7 @@
   "OPTIONS": "Opciók",
   "ORDER": "Order",
   "PAUSE": "Pause",
+  "PHONE": "Phone",
   "PITCH": "Pitch",
   "PLAY": "Play",
   "PLAYLIST": "Playlists",
@@ -178,6 +179,7 @@
   "SAVE": "Save",
   "SAVE_AS_PLAYLIST": "Save as playlist",
   "SAVE_TO_DOWNLOADS": "Mentés a letöltések közé",
+  "SD_CARD": "SD Card",
   "SEARCH": "Keresés",
   "SEARCH_COLLECTION": "Keresés a gyűjteményben",
   "SEARCH_HISTORY_SUBHEADER": "Legutóbbi keresések",
