--- a/assets/translations/id_ID.json
+++ b/assets/translations/id_ID.json
@@ -134,6 +134,7 @@
   "OPTIONS": "Pengaturan",
   "ORDER": "Urutan",
   "PAUSE": "Jeda",
+  "PHONE": "Phone",
   "PITCH": "Pitch",
   "PLAY": "Mainkan",
   "PLAYLIST": "Daftar putar",
@@ -178,6 +179,7 @@
   "SAVE": "Save",
   "SAVE_AS_PLAYLIST": "Simpan sebagai daftar putar",
   "SAVE_TO_DOWNLOADS": "Simpan ke Unduhan",
+  "SD_CARD": "SD Card",
   "SEARCH": "Cari",
   "SEARCH_COLLECTION": "Cari koleksi",
   "SEARCH_HISTORY_SUBHEADER": "Pencarian terakhir anda",
