--- a/assets/translations/ja_JP.json
+++ b/assets/translations/ja_JP.json
@@ -134,6 +134,7 @@
   "OPTIONS": "オプション",
   "ORDER": "順序",
   "PAUSE": "一時停止",
+  "PHONE": "Phone",
   "PITCH": "Pitch",
   "PLAY": "再生",
   "PLAYLIST": "プレイリスト",
@@ -178,6 +179,7 @@
   "SAVE": "保存",
   "SAVE_AS_PLAYLIST": "プレイリストとして保存",
   "SAVE_TO_DOWNLOADS": "ダウンロードに保存",
+  "SD_CARD": "SD Card",
   "SEARCH": "検索",
   "SEARCH_COLLECTION": "コレクションを検索",
   "SEARCH_HISTORY_SUBHEADER": "最近の検索",
