--- a/assets/translations/mg_MG.json
+++ b/assets/translations/mg_MG.json
@@ -134,6 +134,7 @@
   "OPTIONS": "Safidy",
   "ORDER": "Order",
   "PAUSE": "Pause",
+  "PHONE": "Phone",
   "PITCH": "Pitch",
   "PLAY": "Play",
   "PLAYLIST": "Playlists",
@@ -178,6 +179,7 @@
   "SAVE": "Save",
   "SAVE_AS_PLAYLIST": "Save as playlist",
   "SAVE_TO_DOWNLOADS": "Tehirizo amin'ny fisintomana",
+  "SD_CARD": "SD Card",
   "SEARCH": "Fikarohana",
   "SEARCH_COLLECTION": "Fanangonana fikarohana",
   "SEARCH_HISTORY_SUBHEADER": "Ny karoka nataonao tato ho ato",
