--- a/assets/translations/nl_NL.json
+++ b/assets/translations/nl_NL.json
@@ -134,6 +134,7 @@
   "OPTIONS": "Opties",
   "ORDER": "Order",
   "PAUSE": "Pause",
+  "PHONE": "Phone",
   "PITCH": "Pitch",
   "PLAY": "Play",
   "PLAYLIST": "Playlists",
@@ -178,6 +179,7 @@
   "SAVE": "Save",
   "SAVE_AS_PLAYLIST": "Save as playlist",
   "SAVE_TO_DOWNLOADS": "Sla op in downloads",
+  "SD_CARD": "SD Card",
   "SEARCH": "Zoeken",
   "SEARCH_COLLECTION": "Zoek Collectie",
   "SEARCH_HISTORY_SUBHEADER": "Uw recente zoekopdrachten",
