--- a/assets/translations/pt_BR.json
+++ b/assets/translations/pt_BR.json
@@ -134,6 +134,7 @@
   "OPTIONS": "Opções",
   "ORDER": "Pedido",
   "PAUSE": "Pausar",
+  "PHONE": "Phone",
   "PITCH": "Pitch",
   "PLAY": "Reproduzir",
   "PLAYLIST": "Playlist",
@@ -178,6 +179,7 @@
   "SAVE": "Salvar",
   "SAVE_AS_PLAYLIST": "Salvar como playlist",
   "SAVE_TO_DOWNLOADS": "Salvar nos downloads",
+  "SD_CARD": "SD Card",
   "SEARCH": "Procurar",
   "SEARCH_COLLECTION": "Procurar Coleção",
   "SEARCH_HISTORY_SUBHEADER": "Suas buscas recentes",
