--- a/assets/translations/ru_RU.json
+++ b/assets/translations/ru_RU.json
@@ -134,6 +134,7 @@
   "OPTIONS": "Параметры",
   "ORDER": "Порядок",
   "PAUSE": "Пауза",
+  "PHONE": "Phone",
   "PITCH": "Pitch",
   "PLAY": "Плей",
   "PLAYLIST": "Плейлисты",
@@ -178,6 +179,7 @@
   "SAVE": "Сохранить",
   "SAVE_AS_PLAYLIST": "Сохранить как плейлист",
   "SAVE_TO_DOWNLOADS": "Сохранить в \"Загрузки\"",
+  "SD_CARD": "SD Card",
   "SEARCH": "Поиск",
   "SEARCH_COLLECTION": "Поиск по коллекции",
   "SEARCH_HISTORY_SUBHEADER": "Недавние запросы",
