--- a/assets/translations/sl_SI.json
+++ b/assets/translations/sl_SI.json
@@ -134,6 +134,7 @@
   "OPTIONS": "Možnosti",
   "ORDER": "Vrstni red",
   "PAUSE": "Ustavi",
+  "PHONE": "Phone",
   "PITCH": "Pitch",
   "PLAY": "Predvajaj",
   "PLAYLIST": "Seznami predvajanja",
@@ -178,6 +179,7 @@
   "SAVE": "Save",
   "SAVE_AS_PLAYLIST": "Shrani kot seznam predvajanja",
   "SAVE_TO_DOWNLOADS": "Shrani med prenose",
+  "SD_CARD": "SD Card",
   "SEARCH": "Išči",
   "SEARCH_COLLECTION": "Preišči kolekcijo",
   "SEARCH_HISTORY_SUBHEADER": "Tvoja nedavna iskanja",
