--- a/assets/translations/sv_SE.json
+++ b/assets/translations/sv_SE.json
@@ -134,6 +134,7 @@
   "OPTIONS": "Options",
   "ORDER": "Order",
   "PAUSE": "Pause",
+  "PHONE": "Phone",
   "PITCH": "Pitch",
   "PLAY": "Play",
   "PLAYLIST": "Playlists",
@@ -178,6 +179,7 @@
   "SAVE": "Save",
   "SAVE_AS_PLAYLIST": "Save as playlist",
   "SAVE_TO_DOWNLOADS": "Spara i nerladdningar",
+  "SD_CARD": "SD Card",
   "SEARCH": "Sök",
   "SEARCH_COLLECTION": "Sök samling",
   "SEARCH_HISTORY_SUBHEADER": "Dina senaste sökningar",
