--- a/assets/translations/tr_TR.json
+++ b/assets/translations/tr_TR.json
@@ -134,6 +134,7 @@
   "OPTIONS": "Seçenekler",
   "ORDER": "Sıra",
   "PAUSE": "Durdur",
+  "PHONE": "Phone",
   "PITCH": "Pitch",
   "PLAY": "Oynat",
   "PLAYLIST": "Oynatma listeleri",
@@ -178,6 +179,7 @@
   "SAVE": "Save",
   "SAVE_AS_PLAYLIST": "Save as playlist",
   "SAVE_TO_DOWNLOADS": "İndirilenlere kaydet",
+  "SD_CARD": "SD Card",
   "SEARCH": "Ara",
   "SEARCH_COLLECTION": "Koleksiyon ara",
   "SEARCH_HISTORY_SUBHEADER": "Son aramaların",
