--- a/assets/translations/zh_CN.json
+++ b/assets/translations/zh_CN.json
@@ -134,6 +134,7 @@
   "OPTIONS": "选项",
   "ORDER": "顺序",
   "PAUSE": "暂停",
+  "PHONE": "Phone",
   "PITCH": "Pitch",
   "PLAY": "播放",
   "PLAYLIST": "播放列表",
@@ -178,6 +179,7 @@
   "SAVE": "Save",
   "SAVE_AS_PLAYLIST": "另存为播放列表",
   "SAVE_TO_DOWNLOADS": "保存到下载列表",
+  "SD_CARD": "SD Card",
   "SEARCH": "搜索",
   "SEARCH_COLLECTION": "搜索收藏夹",
   "SEARCH_HISTORY_SUBHEADER": "您最近搜索记录",
